# reflex

./: CMakeLists.txt  exeplog.txt
data/TensionMapping_test/: 1107_tensionMapping_7143098937415.txt  20240809_1.csv  tension.xlsx  tension_mapping_history.xlsx
data/adapt/good/: 20240818_1.csv  20240818_11.csv  20240818_1500.csv  20240818_28.csv  20240819_n42.csv  20240819_r42.csv
data/adapt/reflex_with_model/: 20240819_r1.csv  20240819_r10.csv  20240819_r11.csv  20240819_r12.csv  20240819_r13.csv  20240819_r14_miss.csv  20240819_r15.csv  20240819_r16.csv  20240819_r17.csv  20240819_r18.csv  20240819_r19.csv  20240819_r2.csv  20240819_r20.csv  20240819_r3.csv  20240819_r4.csv  (+5 more)
data/feedback_test/: 20240809_1.txt  20240809_3.csv  20240809_4.csv  20240809_6.csv  20240809_8.csv  20240811_1.csv  20240811_105.csv  20240811_2.csv  20240812_100.csv  20240812_101.csv  20240812_102.csv  20240812_105.csv  20240813_2.csv  20240813_30.csv  20240813_305.csv  20240813_7.csv  20240813_7001.csv
data/voltage_force_slope/: calculate_new_parameters.xlsx
designs/: ControlSchema_final.bak  ControlSchema_final.dwg  tension_sensor_baseboard.dwg
include/: Angle_Pid.h  DataFitting.h  ReflexCordinator.h  ad5360.h  ad7616.h  ad7730.h  comparator.h  control_board.h  embedded_gpio.h  embedded_spi.h  iir_filter.h  interneuron.h  lower_controller.h  muscle.h  pid_controller.h  raspberry_pi_gpio.h  raspberry_pi_spi.h  rate_loop.h  rt_ave.h  top_controller.h
src/: 0715_motor_control.cpp  SeperateTest.cpp  Tensionmapping.cpp  hysteresis_test.cpp  reflex_control copy.cpp  reflex_control.cpp  reflex_control_copy.cpp  reflex_control_copy2.cpp  reflex_control_model.cpp
src/lib/: Angle_Pid.cpp  DataFitting.cpp  MovingFilter.cpp  ad5360.cpp  ad7616.cpp  ad7730.cpp  circular_buffer.hpp  comparator.cpp  control_board.cpp  iir_filter.cpp  interneuron.cpp  lower_controller.cpp  lower_controller_copy1.cpp  lower_controller_copy2.cpp  muscle - Copy.cpp  muscle.cpp  pid_controller.cpp  raspberry_pi_gpio.cpp  raspberry_pi_spi.cpp  rate_loop.cpp  rt_ave.cpp  top_controller.cpp
(+177 files in other folders)
